# teoria_das_comunicacoes

01-apresentacao_curso_e_conceitos_fundamentais/: pyproject.toml
01-apresentacao_curso_e_conceitos_fundamentais/exemplos/: analise_fourier.grc  analise_voz.grc  demo_fm.grc
01-apresentacao_curso_e_conceitos_fundamentais/notebooks/: CalculoBanda_exercicios_01.ipynb  analise_voz.ipynb
03-correlacao_ortogonalidade_sinais/exemplos/: correlacao.py  correlacao_sinais.grc
03-correlacao_ortogonalidade_sinais/projetos/: TC-Ortogonality-and-Correlation_ToComplete.grc
04-principios_am/exemplos/: trans_am_simples.grc  transportando_sinais.grc
04-principios_am/projetos/: Tx_Rx_AM_to_complete.grc
05-principios_fm/apresentacoes/: 05-pratica-ufpa-curso_teoria_comunicacoes.pptx
05-principios_fm/exemplos/: TC_FM.grc
Exercícios/: TC-Ex-1.grc  TC_Ex_1.ipynb
exemplos/: TC-DEMO-FM.grc
