[project]
name = "01-apresentacao-curso-e-conceitos-fundamentais"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=7.2.0",
    "ipympl>=0.10.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "scipy>=1.15.3",
    "sounddevice>=0.5.5",
]
